--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "udacity-mws-currency-converter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://omeiregman.github.io/udacity-mws-27--currency-converter/",
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "gh-pages": "^1.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "react": "^16.4.1",
@@ -18,6 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
